--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,5 +1,6 @@
 $color-blue: #5474fd;
 $color-white: #ffffff;
+$color-brown: #333333;
 
 header {
   position: relative;
@@ -7,6 +8,22 @@ header {
   height: 821px;
   color: $color-white;
   font-family: "Josefin Sans", sans-serif;
+
+  h1 {
+    font-size: 48px;
+    font-weight: bold;
+    line-height: 26px;
+    letter-spacing: 4.8px;
+    text-transform: uppercase;
+    margin-bottom: 11px;
+  }
+
+  h5 {
+    font-size: 22px;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 6.82px;
+  }
 
   .flex {
     height: 100%;
@@ -19,22 +36,6 @@ header {
       text-align: center;
     }
   }
-}
-
-h1 {
-  font-size: 48px;
-  font-weight: bold;
-  line-height: 26px;
-  letter-spacing: 4.8px;
-  text-transform: uppercase;
-  margin-bottom: 11px;
-}
-
-h5 {
-  font-size: 22px;
-  font-size: 22px;
-  line-height: 26px;
-  letter-spacing: 6.82px;
 }
 
 .search {
@@ -103,16 +104,173 @@ h5 {
     justify-content: space-between;
 
     li {
-        text-transform: uppercase;
+      text-transform: uppercase;
       padding: 20px;
-      
     }
 
     li:hover {
-        color: purple;
-        }
+      color: purple;
+    }
   }
 }
 
 .brand {
+}
+
+.why-choose-us {
+  display: flex;
+  justify-content: space-evenly;
+  background-image: url(../images/backgroundwhy.svg);
+  height: 685px;
+
+  .flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100%;
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 26px;
+
+    font-family: "Aleo", serif;
+  }
+
+  p {
+    font-size: 16px;
+    line-height: 26px;
+    font-family: "Josefin Sans", sans-serif;
+  }
+
+  button {
+    text-transform: uppercase;
+    width: 228px;
+    height: 63px;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    background-color: $color-blue;
+    font-family: "Aleo", serif;
+    color: $color-white;
+    text-decoration: none;
+    border: none;
+  }
+
+  .images {
+    display: flex;
+
+    .image-1 {
+      align-self: center;
+      margin-left: 20px;
+      margin-bottom: 50px;
+    }
+
+    .image-2 {
+      align-self: flex-end;
+      margin-right: 50px;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.how-it-works {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 50px;
+  height: 340px;
+  background-color: $color-brown;
+
+  .flex {
+    display: flex;
+  }
+
+  .img-book {
+    display: flex;
+    font-style: #00a2ff;
+    font-size: 36px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    h5 {
+      font-family: "Aleo", serif;
+      display: flex;
+      align-items: center;
+      text-align: center;
+    }
+  }
+
+  .img-check {
+    display: flex;
+    font-style: #ff6363;
+
+    h5 {
+      font-size: 36px;
+      line-height: 26px;
+    }
+  }
+
+  .img-search {
+    font-style: #5474fd;
+
+    h5 {
+      font-size: 36px;
+      line-height: 26px;
+    }
+  }
+}
+
+.accomodation {
+  display: flex;
+
+  .group-1 {
+    height: 700px;
+
+    .group-2 {
+      height: 700px;
+    }
+  }
+}
+
+.testimonials {
+  display: flex;
+
+  .background-pic {
+    height: 731px;
+  }
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 271px;
+  background-color: $color-brown;
+  font-family: "Josefin Sans", sans-serif;
+
+  h1 {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 3.36px;
+    text-transform: uppercase;
+    color: white;
+  }
+
+  h5 {
+    font-size: 16px;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 1.6px;
+    color: white;
+  }
 }
