--- a/styles/index.scss
+++ b/styles/index.scss
@@ -249,6 +249,9 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+
   height: 271px;
   background-color: $color-brown;
   font-family: "Josefin Sans", sans-serif;
@@ -262,15 +265,28 @@ footer {
     letter-spacing: 3.36px;
     text-transform: uppercase;
     color: white;
+    margin-bottom: 8px;
   }
 
   h5 {
     font-size: 16px;
     line-height: 26px;
+    letter-spacing: 1.6px;
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 1.6px;
     color: white;
+  }
+}
+
+.socials {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: $color-white;
+
+  li:hover {
+    color: purple;
   }
 }
